fixes spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -145,3 +145,14 @@ Button {
     rgb(174, 0, 255)
   ) !important;
 }
+
+.comments-container {
+  display:flex;
+  justify-content:center;
+
+}
+.comments {
+  min-width:600px;
+  background: black;
+  color: white;
+}
